--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "normalize-scss": "^7.0.1",
+    "simple-parallax-js": "^5.6.2",
     "swiper": "^8.2.4"
   },
   "main": ".eslintrc.js",
